# archive

fltk/01.base/: 01.base.workspace.xml  01.project.xml  test  test.cxx
fltk/02.button/: test  test.cxx
fltk/03.sync/: test  test.cxx
fltk/04.text.view/: test  test.cxx
fltk/05.fl.base/: note  test  test.cxx  test.fl  test.h
fltk/06.fl.buttons/: test  test.cxx  test.fl  test.h
fltk/07.fl.viewer/: note  test  test.cxx  test.fl  test.h
fltk/08.fl.logout/: test  test.cxx  test.fl  test.h
fltk/09.fl.editor/: test  test.cxx  test.fl  test.h
fltk/10.fl.buttons.b/: test  test.cxx  test.fl  test.h
fltk/11.fl.metro/: test  test.cxx  test.fl  test.h
fltk/12.base.icon/: test  test.cxx
fltk/13.flcmd/: Makefile  flcmd
fltk/13.flcmd/fluid/: test.cxx  test.fl  test.h
fltk/13.flcmd/fluid/old/: main.cxx  main.h  note
fltk/13.flcmd/fluid/old/fluid/: test.cxx  test.fl  test.h
fltk/13.flcmd/src/: main.cxx
fltk/14.event/: test  test.cxx
fltk/15.windrag/: test  test.cxx
fltk/16.basic/: test  test.cxx
fltk/17.xpm.icon/: test  test.cxx
fltk/18.resize/: test  test.cxx
fltk/19.fview/: Makefile
fltk/19.fview/src/: main.cxx  main.h
fltk/19.fview/src/fluid/: test.fl
fltk/20.win.titlebar/: test  test.cxx
fltk/21. fltk-notepad/: test  test.cxx
fltk/22. chatgpt-color-button/: test  test.cxx
fltk/23. resizable thumbnails/: test  test.cxx
fltk/24. chatgpt launcher/: test  test.cxx
fltk/25. text-editor/: test  test.cxx
fltk/26. mandala/: test  test.cxx
go/fyne/: go.mod  test.go
go/gtk/: go.mod  go.sum  test
go/gtk3/: go.mod  test  test.go
gtk/gtk4sample/: test  test.vala
gtk/gtk4sample/appindicator/: test  test.vala
gtk/preload/: stub_wayland.c
gtk/transparency/: test  test.c
python/: calculator.py  dlauncher.py  file-manager.py  imageviewer.py  panel.py  wmlogout.py
python/editor/: ste.py
python/gtk4/: test.py
python/gtk4-adw/: test.py
python/pyfltk/: test.py
python/pyfltk-logout/: test.py
python/pygame/pong/: test.py
python/slagalica/: rjecnik  tktest.py
python/task-manager/: test.py
python/tkinter-hello/: test.py
python/tts/: load.txt  test.py
vala-apps/: build_all.sh
vala-apps/agatha/: CMakeLists.txt  readme.md
vala-apps/agatha/data/: agatha.desktop  org.vala-apps.agatha.gschema.xml
vala-apps/agatha/src/: dialogs.vala  main.vala  pagezoom.vala  settings.vala  viewer.vala
vala-apps/emendo/: CMakeLists.txt  readme.md
vala-apps/emendo/data/: emendo.desktop  org.vala-apps.emendo.gschema.xml
vala-apps/emendo/src/: application.vala  apply.vala  color.vala  dialogs.vala  find.vala  mainwin.vala  nbook.vala  operations.vala  prefdialog.vala  replace.vala  settings.vala  tabs.vala
vala-apps/gtk-appearance/: CMakeLists.txt  readme.md
vala-apps/gtk-appearance/data/: gtk-appearance-openbox  gtk-appearance.desktop
vala-apps/gtk-appearance/src/: main.vala  settings.vala
vala-apps/pangea/: CMakeLists.txt  readme.md
vala-apps/pangea/data/: org.vala-apps.pangea.gschema.xml  pangea.desktop
vala-apps/pangea/src/: iconview.vala  main.vala  menu.vala  monitor.vala  operations.vala  settings.vala  thumbnails.vala  vars.vala  window.vala
vala-apps/voyager/: CMakeLists.txt  readme.md
vala-apps/voyager/data/: voyager.desktop
vala-apps/voyager/src/: voyager.vala
vala-apps/wpset/: CMakeLists.txt  readme.md
vala-apps/wpset/data/: org.vala-apps.wpset.gschema.xml  wpset-shell  wpset.desktop
vala-apps/wpset/src/: imlibsetroot.c  misc.h  wpset.vala
